Dasmoto Web Page

--- a/codecademy/full-stack/DevProject/index.html
+++ b/codecademy/full-stack/DevProject/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>My Coding Journey</title>
+        <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1>Luis Lazu</h1>
