tea cozy site draft 1.0

--- a/codecademy/tea-cozy/index.html
+++ b/codecademy/tea-cozy/index.html
@@ -11,8 +11,69 @@
             <h1 class="cursive">Tea Cozy</h1>
             <div class="sections">
                 <p>Mission</p>
-                <p>Menu</p>
+                <p>Feature Tea</p>
+                <p>Locations</p>
             </div>
         </div>
+        <div class="img-mission-background">
+            <img src="./assests/images/img-mission-background.jpg">
+            <div class="mission-text">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisianlly Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>
+        </div>
+        <div class="tea-images">
+            <h2>Tea of the Month</h2>
+            <h4>What's Steeping at The Tea Cozy?</h4>
+            <div class="tea-item">
+                <img src="./assests/images/img-berryblitz.jpg">
+                <h4 class="header-margin">Fall Berry Blitz</h4>
+            </div>
+            <div class="tea-item">
+                <img src="./assests/images/img-spiced-rum.jpg">
+                <h4 class="header-margin">Spice Rum Chai</h4>
+            </div>
+            <div class="tea-item">
+                <img src="./assests/images/img-donut.jpg">
+                <h4 class="header-margin">Seasonal Donut</h4>
+            </div>
+            <div class="tea-item">
+                <img src="./assests/images/img-myrtle-ave.jpg">
+                <h4 class="header-margin">Myrtle Ave Tea</h4>
+            </div>
+            <div class="tea-item">
+                <img src="./assests/images/img-bedford-bizarre.jpg">
+                <h4 class="header-margin">Bedford Bizarre</h4>
+            </div>
+        </div>
+        <div class="background-img">
+            <div class="location-container">
+                <div class="location-blocks">
+                    <h3> Downtown </h3>
+                    <p> 348 West 4th St</p>
+                    <p> Suite 108</p>
+                    <p> Portland, ME </p>
+                </div>
+                <div class="location-blocks">
+                    <h3> East Bayside </h3>
+                    <p> 3433 Phisherman's Avenue</p>
+                    <p> (Northwest Corner) </p>
+                    <p> Portland, Maine </p>
+                </div>
+                <div class="location-blocks">
+                    <h3> Oakdale </h3>
+                    <p> 515 Crescent Avenue </p>
+                    <p> Second Floor</p>
+                    <p> Portland, Maine </p>
+                </div>
+            </div>
+        </div>
+        <div class="contact">
+            <h2> The Tea Cozy </h2>
+            <h5> contact@theteacozy.com </h5>
+            <p> 917-555-8904 </p>
+        </div>
+        <div class="footer">
+            <p> &copy; The Tea Cozy 2025</p>
     </body>
 </html>
